query the CVS tree.  For example,

    http://cvs-mirror.mozilla.org/webtools/bonsai/cvsquery.cgi?module=all&branch=HEAD&branchtype=match&dir=mozilla%2Fwebtools%2Fbugzilla&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=week&mindate=&maxdate=&cvsroot=%2Fcvsroot 

will tell you what has been changed in the last week.


3/22/99 Added the ability to query by fields which have changed within a date
range.  To make this perform a bit better, we need a new index:

	alter table bugs_activity add index (field);

3/10/99 Added 'groups' stuff, where we have different group bits that we can
put on a person or on a bug.  Some of the group bits control access to bugzilla
features.  And a person can't access a bug unless he has every group bit set
that is also set on the bug.  See the comments in makegroupstable.sh for a bit
more info.

The 'maintainer' param is now used only as an email address for people to send
complaints to.  The groups table is what is now used to determine permissions.

You will need to run the new script "makegroupstable.sh".  And then you need to
feed the following lines to MySQL (replace XXX with the login name of the
maintainer, the person you wish to be all-powerful).

	alter table bugs add column groupset bigint not null;
	alter table profiles add column groupset bigint not null;
	update profiles set groupset=0x7fffffffffffffff where login_name = XXX;



3/8/99 Added params to control how priorities are set in a new bug.  You can
now choose whether to let submitters of new bugs choose a priority, or whether
they should just accept the default priority (which is now no longer hardcoded
to "P2", but is instead a param.)  The default value of the params will cause
the same behavior as before.

3/3/99 Added a "disallownew" field to the products table.  If non-zero, then
don't let people file new bugs against this product.  (This is for when a 
product is retired, but you want to keep the bug reports around for posterity.)